; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_utf8_console_width.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_utf8.c_utf8_console_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @utf8_console_width(i8* %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  br label %6

6:                                                ; preds = %16, %1
  %7 = load i8*, i8** %3, align 8
  %8 = load i8, i8* %7, align 1
  %9 = icmp ne i8 %8, 0
  br i1 %9, label %10, label %23

10:                                               ; preds = %6
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @utf8_char_console_width(i8* %11)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp slt i32 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %10
  store i64 -1, i64* %2, align 8
  br label %25

16:                                               ; preds = %10
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = load i64, i64* %4, align 8
  %20 = add i64 %19, %18
  store i64 %20, i64* %4, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = call i8* @utf8_next_char(i8* %21)
  store i8* %22, i8** %3, align 8
  br label %6

23:                                               ; preds = %6
  %24 = load i64, i64* %4, align 8
  store i64 %24, i64* %2, align 8
  br label %25

25:                                               ; preds = %23, %15
  %26 = load i64, i64* %2, align 8
  ret i64 %26
}

declare dso_local i32 @utf8_char_console_width(i8*) #1

declare dso_local i8* @utf8_next_char(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
